# dep_graph

./: LICENSE  README.md  dependency_demo_2.py  pyproject.toml
.github/workflows/: python-package.yml
src/dep_graph/: analyzer.py  dep_graph.py  parser.py
tests/: common.py  test_analyzer.py  test_end_to_end.py  test_parser.py  tests_analyzer.py  tests_parser.py
