[project]
name = "dep_graph"
version = "0.0.1"
authors = [
  { name="Emmanuel Pauchard", email="emmanuel.pauchard@gmail.com" },
]
description = "A simple Dependency Graph analyzer."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emmanuelpauchard/dep_graph"
"Bug Tracker" = "https://github.com/emmanuelpauchard/dep_graph/issues"
